--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 Django>=4.2
 djangorestframework>=3.14
 drf-yasg>=1.21.7
-psycopg2-binary>=2.9
-django-cors-headers>=4.3
+psycopg2-binary==2.9.9
+django-cors-headers==4.4.0
 djangorestframework-simplejwt>=5.3
+python-dotenv==1.0.1
+whitenoise==6.9.0
+gunicorn==22.0.0
